--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
+    "cuid": "^3.0.0",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.289.0",
     "next": "latest",
@@ -35,7 +36,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
